--- a/styles/styles.css
+++ b/styles/styles.css
@@ -1,5 +1,32 @@
+body,
+html {
+    margin: 0;
+    padding: 0;
+    box-sizing: border-box;
+}
+
+body,
+.main {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
 .article-wrapper {
     border: 2px solid red;
     padding: 5px;
     margin-bottom: 10px;
+}
+
+.header {
+    width: 80%;
+}
+
+#news-sources,
+.find-news-button {
+    width: 40vw;
+    height: 20px;
+}
+
+.news-block {
+    width: 80vw;
 }
