--- a/styles/styles.css
+++ b/styles/styles.css
@@ -9,16 +9,26 @@ html,
 body {
     min-height: 100%;
 }
+
 .header {
     text-align: center;
     color: #08562b;
     padding: 20px;
 }
+
 .wrapper,
 .main {
     display: flex;
     flex-direction: column;
     align-items: center;
+}
+
+.wrapper {
+    min-height: 100vh;
+}
+
+.main {
+    flex: 1;
 }
 
 .header,
@@ -69,6 +79,12 @@ body {
     color: #770430;
 }
 
+.footer {
+    height: 50px;
+    text-align: center;
+    margin-top: 20px;
+}
+
 @media all and (max-width: 768px), (max-device-width: 768px) {
     #news-sources,
     .find-news-button {
@@ -81,6 +97,10 @@ body {
     .news-block,
     .footer {
         width: 95vw;
+    }
+    #news-sources,
+    .find-news-button {
+        font-size: 20px;
     }
 }
 
