--- a/styles/styles.css
+++ b/styles/styles.css
@@ -18,7 +18,9 @@ body {
 
 .wrapper,
 .main {
+    display: -ms-flexbox;
     display: flex;
+    -ms-flex-direction: column;
     flex-direction: column;
     align-items: center;
 }
@@ -28,7 +30,8 @@ body {
 }
 
 .main {
-    flex: 1;
+    -ms-flex: 1 1 auto;
+    flex: 1 1 auto;
 }
 
 .header,
