--- a/src/styles/styles.scss
+++ b/src/styles/styles.scss
@@ -2,7 +2,7 @@
     margin: 0;
     padding: 0;
     box-sizing: border-box;
-    font-family: 'Sansita', sans-serif;
+    font-family: 'Sansita One', sans-serif;
 }
 
 html,
