pug changes added

--- a/backend/views/index.pug
+++ b/backend/views/index.pug
@@ -2,4 +2,4 @@ html
   head
     title!= title
   body
-    h1!= message
+    h1!= 'You are trying to open page ' + message + ' , but this page doesn\'t exist'
