partially worked authorization

--- a/backend-2/views/user.pug
+++ b/backend-2/views/user.pug
@@ -6,8 +6,8 @@ html
     script(src='https://cdnjs.cloudflare.com/ajax/libs/jquery/3.3.1/jquery.js')
   body
     form.userForm
-        label(for="userName") User name
-        input#userName
+        label(for="username") User name
+        input#username
         label(for="password") Password
         input#password
         button#signIn Sign in
