--- a/react/src/client/views/index.pug
+++ b/react/src/client/views/index.pug
@@ -2,6 +2,8 @@ html
     head
         title News Portal
     body
-        div(id='app') !{entry}
+        div(id='app') !{entry} 
+    script.
+        window.__PRELOADED_STATE__ = !{JSON.stringify(blogs).replace(/</g, '\\u003c')}
     script
         include ../../../dist/client.js
