react-routing and redux were added

--- a/react/src/client/views/index.pug
+++ b/react/src/client/views/index.pug
@@ -2,7 +2,7 @@ html
     head
         title News Portal
     body
-        div(id='app') !{entry} 
+        div(id='react-app') !{entry} 
     script.
         window.__PRELOADED_STATE__ = !{JSON.stringify(blogs).replace(/</g, '\\u003c')}
     script
